--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.demandt</groupId>
-    <artifactId>cucumber-example</artifactId>
+    <artifactId>dtu-pay</artifactId>
     <version>1.0</version>
 
     <properties>
