--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>4.8.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
