--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
-            <groupId>dtu.fastmoney</groupId>
-            <artifactId>bank</artifactId>
-            <version>2.0.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>dtu.fastmoney</groupId>-->
+<!--            <artifactId>bank</artifactId>-->
+<!--            <version>2.0.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
