--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>rt</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>dtu.fastmoney</groupId>-->
 <!--            <artifactId>bank</artifactId>-->
